--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,14 @@
 einops==0.3.2
-hydra-core==1.2.0
-numpy
-opencv-python-headless
-Pillow
-
-pytorch-lightning==1.6.3
-tensorflow==2.7.0
+hydra-core==1.3.2
+lightning==2.0.7
+numpy==1.23.5
+omegaconf==2.3.0
+opencv_python_headless==4.8.0.76
+Pillow==10.0.0
+scipy==1.11.2
+tensorflow==2.13.0
+tensorflow_hub==0.14.0
 timm==0.5.4
-torch==1.9.0
-torchaudio==0.9.0
-torchmetrics==0.8.2
-torchvision==0.10.0
+torch==2.0.1
+torchvision==0.15.2
 tqdm==4.64.0
-setuptools==58.2.0
