--- a/configs/config_DMBN_VFP_NPVP-S.yaml
+++ b/configs/config_DMBN_VFP_NPVP-S.yaml
@@ -15,7 +15,8 @@ Dataset:
     num_future_frames: 10
     test_num_past_frames: 2
     test_num_future_frames: 28
-    batch_size: 4
+    batch_size: 2
+    accumulate_grad_batches: 4 # effectively multiples the batch size
     phase: 'debug' #'debug' phase, split train/val; 'deploy' phase, no val set
 
 #Configuration for the autoencoder
