--- a/configs/config_KTH_VFP_NPVP-D.yaml
+++ b/configs/config_KTH_VFP_NPVP-D.yaml
@@ -16,6 +16,7 @@ Dataset:
     test_num_past_frames: 10
     test_num_future_frames: 20
     batch_size: 8
+	accumulate_grad_batches: 4 # effectively multiples the batch size
     phase: 'deploy' #'debug' phase, split train/val; 'deploy' phase, no val set
 
 #Configuration for the autoencoder
